# sherpa

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PROJECT.md  README.md  cliff.toml  colour-palettes.md  docker-compose.bu  lab.sql
.cargo/: config.toml.example
crates/client/: Cargo.toml
crates/client/src/: cert_fetch.rs  main.rs  token.rs  trust_store.rs
crates/client/src/cmd/: boot_containers.rs  boxx.rs  cert.rs  clean.rs  cli.rs  console.rs  container.rs  destroy.rs  destroy_ws.rs  doctor.rs  down.rs  download.rs  image.rs  import.rs  init.rs  inspect.rs  inspect_ws.rs  login.rs  manifest_processing.rs  mod.rs  new.rs  redeploy.rs  resume.rs  ssh.rs  ssh_config.rs  unikernel.rs  up.rs  up_ws.rs  validate.rs  virtual_machine.rs
crates/client/src/ws_client/: client.rs  messages.rs  mod.rs  tls.rs
crates/container/: Cargo.toml
crates/container/src/: connect.rs  lib.rs  util.rs
crates/container/src/container/: create.rs  delete.rs  exec.rs  inspect.rs  list.rs  mod.rs  start.rs  stop.rs
crates/container/src/image/: list.rs  load.rs  mod.rs  pull.rs  save.rs
crates/container/src/network/: create.rs  delete.rs  list.rs  mod.rs
crates/container/tests/: integration_tests.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: main.rs  token.rs
crates/ctl/src/cmd/: clean.rs  cli.rs  doctor.rs  image.rs  init.rs  mod.rs  user.rs
crates/ctl/src/common/: rpc.rs
crates/data/: Cargo.toml
crates/data/src/: config.rs  container.rs  cpu.rs  db.rs  device.rs  disk.rs  interface.rs  lab.rs  lib.rs  mapping.rs  network.rs  node.rs  ztp.rs
crates/db/: Cargo.toml
crates/db/src/: action.rs  connect.rs  helpers.rs  lib.rs  model.rs  seeder.rs
crates/db/src/bridge/: create.rs  delete.rs  mod.rs  read.rs
crates/db/src/lab/: auth.rs  create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/db/src/link/: create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/db/src/node/: create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/db/src/node_config/: create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/db/src/node_image/: create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/db/src/schema/: apply.rs  bridge.rs  helpers.rs  lab.rs  link.rs  mod.rs  node.rs  node_config.rs  node_image.rs  user.rs
crates/db/src/seed/: admin_user.rs  mod.rs  node_config.rs
crates/db/src/user/: create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/db/tests/: helper.rs  mod.rs  node_config_tests.rs
crates/db/tests/lab/: auth_tests.rs  create_tests.rs  delete_tests.rs  mod.rs  read_tests.rs  update_tests.rs
crates/db/tests/link/: create_tests.rs  delete_tests.rs  read_tests.rs  update_tests.rs
crates/db/tests/node/: create_tests.rs  delete_tests.rs  read_tests.rs  update_tests.rs
crates/db/tests/node_config/: create_tests.rs  delete_tests.rs  mod.rs  read_tests.rs  update_tests.rs
crates/db/tests/node_image/: create_tests.rs  delete_tests.rs  read_tests.rs  update_tests.rs
crates/db/tests/relationships/: mod.rs
crates/db/tests/schema/: mod.rs
crates/db/tests/user/: create_tests.rs  delete_tests.rs  mod.rs  read_tests.rs  update_tests.rs
crates/server/: API.md  Cargo.toml
crates/server/src/: cli.rs  init.rs  inspect.rs  lib.rs  main.rs  templates.rs
crates/server/src/api/: errors.rs  extractors.rs  handlers.rs  mod.rs  router.rs  sse.rs
crates/server/src/auth/: context.rs  cookies.rs  jwt.rs  middleware.rs  mod.rs
crates/server/src/daemon/: manager.rs  metrics.rs  mod.rs  pidfile.rs  server.rs  state.rs
crates/server/src/services/: clean.rs  container_pull.rs  delete.rs  destroy.rs  down.rs  download.rs  impairment.rs  import.rs  inspect.rs  list_labs.rs  mod.rs  node_ops.rs  progress.rs  redeploy.rs  resume.rs  scanner.rs  up.rs
crates/server/templates/: admin-dashboard.html.jinja  admin-labs.html.jinja  admin-node-config-detail.html.jinja  admin-node-config-edit.html.jinja  admin-node-config-versions.html.jinja  admin-node-configs.html.jinja  admin-node-image-detail.html.jinja  admin-node-image-edit.html.jinja  admin-node-image-versions.html.jinja  admin-node-images.html.jinja  admin-user-edit.html.jinja  auth-base.html.jinja  base.html.jinja  dashboard.html.jinja  error-403-admin.html.jinja  error-403.html.jinja  error-404.html.jinja  lab-detail.html.jinja  login.html.jinja  profile.html.jinja  signup.html.jinja
crates/server/tests/: auth_tests.rs  image_management_tests.rs  lab_lifecycle_tests.rs  user_management_tests.rs  websocket_tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: api_spec.rs  konst.rs  lib.rs
crates/template/: Cargo.toml
crates/template/src/: arista_eos.rs  aruba_aos.rs  cisco_asa.rs  cisco_ftdv.rs  cisco_ios.rs  cisco_iosxe.rs  cisco_iosxr.rs  cisco_ise.rs  cisco_nxos.rs  cloud_init.rs  cloudbase_init.rs  cumulus_linux.rs  dnsmasq.rs  domain.rs  frr.rs  ignition.rs  juniper_junos.rs  lib.rs  mikrotik_routeros.rs  nokia_srlinux.rs  nokia_srlinux_factory_acl.json  paloalto_panos.rs  pyats.rs  sonic_linux.rs  ssh.rs  vault.rs
crates/template/tests/: helpers.rs  templates.rs
data/: Cargo.toml
data/src/: config.rs  container.rs  device.rs  dhcp.rs  disk.rs  dns.rs  interface.rs  lab.rs  lib.rs  mapping.rs  network.rs  user.rs  ztp.rs
template/: Cargo.toml
template/src/: arista_eos.rs  aruba_aos.rs  cisco_ios.rs  cisco_iosxe.rs  cisco_iosxr.rs  cloud_init.rs  dnsmasq.rs  domain.rs  ignition.rs  juniper_junos.rs  lib.rs  pyats.rs  sonic_linux.rs  ssh.rs
template/templates/arista/: arista_veos.jinja
template/templates/aruba/: aruba_aoscx_sh.jinja
template/templates/cisco/: cisco_asa.jinja  cisco_iosv.jinja  cisco_iosvl2.jinja  cisco_iosxr.jinja  cisco_nxos.jinja
template/templates/cumulus/: cumulus_linux.jinja
template/templates/dnsmasq/: config.jinja
template/templates/juniper/: juniper_junos.jinja
template/templates/libvirt/: libvirt_domain.jinja
template/templates/sonic/: ztp_user.jinja
util/: Cargo.toml
util/src/: config.rs  container.rs  dhcp.rs  dns.rs  encode.rs  file_system.rs  interface.rs  ip.rs  lib.rs  mac.rs  port.rs  random.rs  sanitizers.rs  ssh.rs  text.rs  user.rs
(+531 files in other folders)
