# Speed up SSH key generation in debug mode.
[profile.dev.package.num-bigint-dig]
opt-level = 3
# Use once it becomes available in the ssh-key crate release.
# [profile.dev.package.crypto-bigint]
# opt-level = 3

[workspace]
resolver = "3"
members = [
  "crates/client",
  "crates/container",

  "crates/db",
  "crates/network",
  "crates/libvirt",
  "crates/server",
  "crates/shared",
  "crates/template",
  "crates/topology",
  "crates/validate",
]
default-members = ["crates/client"]

[workspace.dependencies]
# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"] }
tracing-opentelemetry = "0.32"

# Clippy lints: unwrap_used and expect_used are denied via
# #![deny(...)] in each crate's lib.rs/main.rs (not here),
# because workspace-level deny translates to --deny CLI flags
# which cannot be overridden by #[allow] in test code.
# See clippy.toml for test exceptions.
