# Keep development builds incremental and avoid broad debug optimization for fast local iteration.
[profile.dev]
incremental = true
opt-level = 0

# Speed up SSH key generation in debug mode without optimizing all dependencies.
[profile.dev.package.num-bigint-dig]
opt-level = 3

# Release profile settings must live at the workspace root to apply.
# Do not set panic = "abort" here: `cargo build --workspace --all-targets --release`
# then compiles many dependencies twice (abort + unwind), which pushes the build
# progress total from ~690 units to ~1120 units.
[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[workspace]
resolver = "3"
members = [
  "crates/client",
  "crates/container",
  "crates/db",
  "crates/network",
  "crates/libvirt",
  "crates/server",
  "crates/shared",
  "crates/template",
  "crates/topology",
  "crates/validate",
]
exclude = ["crates/ebpf-redirect"]
default-members = ["crates/client"]

[workspace.dependencies]
# HTTP client
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "metrics", "trace"] }
tracing-opentelemetry = "0.32"

[workspace.lints.rust]
dead_code = "forbid"

# Clippy lints: unwrap_used and expect_used are denied via
# #![deny(...)] in each crate's lib.rs/main.rs (not here),
# because workspace-level deny translates to --deny CLI flags
# which cannot be overridden by #[allow] in test code.
# See clippy.toml for test exceptions.
