[package]
name = "sherpa"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
container = { path = "../container" }
topology = { path = "../topology" }
template = { path = "../template" }
libvirt = { path = "../libvirt" }
validate = { path = "../validate" }
network = { path = "../network" }
db = { path = "../db" }

# Errors
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.16", features = ["derive", "env"] }

# Serialization/Deserialization
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
toml = "0.8.19"
toml_edit = "0.22.22"

# De/Compression
async-compression = { version = "0.4.32", features = ["tokio", "gzip"] }

# Random number generator
rand = "0.8.5"

# Templates
askama = "0.14.0"

# Random names
petname = "2.0.2"

# Async
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"

# http client
reqwest = "0.11.27"

# WebSocket client
tokio-tungstenite = "0.24"

# UUID for RPC request IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Password input
rpassword = "7.3"

# Time/date handling
jiff = { version = "0.2.20", features = ["serde"] }

# Libvirt
virt = { version = "0.4.1", features = ["qemu"] }

# Generate SSH keys
ssh-key = { version = "0.6.6", features = ["rsa", "ed25519"] }

[dev-dependencies]
tempfile = "3.25.0"

