[package]
name = "sherpa"
version = "0.3.10"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
topology = { path = "../topology" }
template = { path = "../template" }
validate = { path = "../validate" }

# Errors
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.16", features = ["derive", "env"] }

# Serialization/Deserialization
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
toml = "0.8.19"
toml_edit = "0.22.22"

# De/Compression
async-compression = { version = "0.4.32", features = ["tokio", "gzip"] }

# Random number generator
rand = "0.8.5"

# Templates
askama = "0.14.0"

# Random names
petname = "2.0.2"

# Async
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"

# http client
reqwest = "0.11.27"
url = "2.5"

# WebSocket client with TLS support
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# UUID for RPC request IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Password input
rpassword = "7.3"

# Base64 decoding (for JWT)
base64 = "0.22"

# Logging (subscriber for verbose mode)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time/date handling
jiff = { version = "0.2.20", features = ["serde"] }

# TLS support
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"

# Home directory detection
dirs = "6.0"

[dev-dependencies]
tempfile = "3.25.0"
