[package]
name = "sherpactl"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

# Errors
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.16", features = ["derive", "env"] }

# Serialization
serde = "1.0.208"
serde_json = "1.0.128"

# Async
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.31"

# WebSocket client
tokio-tungstenite = "0.24"

# UUID for RPC
uuid = { version = "1.11", features = ["v4", "serde"] }

# Password input
rpassword = "7.3"

# Time/date
chrono = { version = "0.4", features = ["serde"] }

# Base64 decoding (for JWT)
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
