[package]
name = "sherpactl"
version = "0.3.1"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
db = { path = "../db" }
libvirt = { path = "../libvirt" }

# Errors
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.16", features = ["derive", "env"] }

# Serialization
serde = "1.0.208"
serde_json = "1.0.128"

# Async
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.31"

# WebSocket client
tokio-tungstenite = "0.24"

# UUID for RPC
uuid = { version = "1.11", features = ["v4", "serde"] }

# Password input
rpassword = "7.3"

# Time/date
jiff = { version = "0.2.20", features = ["serde"] }

# Base64 decoding (for JWT)
base64 = "0.22"

# Generate SSH keys
ssh-key = { version = "0.6.7", features = ["rsa", "ed25519"] }

# TOML serialization
toml = "0.8.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
