[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

# Errors
anyhow = "1.0.100"
thiserror = "2.0.17"

# Templates
askama = "0.14.0"

# CLI
clap = { version = "4.5.16", features = ["derive"] }

# Serialization/Deserialization
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
surrealdb = "2.4.1"

# IP Addressing
ipnet = { version = "2.11.0", features = ["serde"] }

toml = "0.8.19"

# Enum helpers
strum = "0.27"
strum_macros = "0.27"
