[package]
name = "db"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
shared = { path = "../shared" }

# Errors
anyhow = "1.0.100"

# Logging
tracing = "0.1"

serde = { version = "1.0.228", features = ["derive"] }
surrealdb = "2.4.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
