[package]
name = "sherpa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shared = { path = "../shared" }
data = { path = "../data" }
container = { path = "../container" }
util = { path = "../util" }
topology = { path = "../topology" }
template = { path = "../template" }
libvirt = { path = "../libvirt" }
validate = { path = "../validate" }

# Errors
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.16", features = ["derive"] }

# Serialization/Deserialization
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
toml = "0.8.19"
toml_edit = "0.22.22"

# De/Compression
async-compression = { version = "0.4.32", features = ["tokio", "gzip"] }

# Random number generator
rand = "0.8.5"

# Templates
askama = "0.14.0"

# Random names
petname = "2.0.2"

# Async
futures = "0.3.31"
futures-util = "0.3.31"

# http client
reqwest = "0.11.27"

# Libvirt
virt = { version = "0.4.1", features = ["qemu"] }

# Generate SSH keys
ssh-key = { version = "0.6.6", features = ["rsa", "ed25519"] }
