[package]
name = "sherpad"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

shared = { path = "../shared" }
container = { path = "../container" }
topology = { path = "../topology" }
template = { path = "../template" }
libvirt = { path = "../libvirt" }
network = { path = "../network" }
validate = { path = "../validate" }
db = { path = "../db" }

# Errors
anyhow = "1.0.100"

# Process/Signal management
nix = { version = "0.29", features = ["signal", "process"] }

# CLI
clap = { version = "4.5.16", features = ["derive"] }

# Serialization/Deserialization
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
toml = "0.8.19"
toml_edit = "0.22.22"

# De/Compression
async-compression = { version = "0.4.32", features = ["tokio", "gzip"] }

# Random number generator
rand = "0.8.5"

# Templates
askama = "0.14.0"

# Random names
petname = "2.0.2"

# Async
futures = "0.3.31"
futures-util = "0.3.31"

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# UUID for connection IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Concurrent collections
dashmap = "6.1"

# Timestamps for messages
chrono = { version = "0.4", features = ["serde"] }

# http client
reqwest = "0.11.27"

# Libvirt
virt = { version = "0.4.1", features = ["qemu"] }

# Docker
bollard = "0.19.3"

# Database
surrealdb = "2.4.1"

# Generate SSH keys
ssh-key = { version = "0.6.6", features = ["rsa", "ed25519"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.25.0"
