[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.19"

# File system
shellexpand = "3.1.0"

# Errors
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
tracing = "0.1"

# Encoding/decoding
base64 = "0.22.1"
md5 = "0.7.0"
sha2 = "0.10.8"
twox-hash = "2.0.0"

# Generate SSH keys
ssh-key = { version = "0.6.7", features = ["rsa", "ed25519"] }

# Random number generator
rand = "0.8.5"

# Authentication
argon2 = "0.5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# IP Addressing
ipnet = { version = "2.11.0", features = ["serde"] }
getifaddrs = "0.6.0"

reqwest = "0.11.27"

# Templates
askama = "0.14.0"

# Table formatting
tabled = "0.20.0"

# CLI
clap = { version = "4.5.16", features = ["derive"] }

# Serialization/Deserialization
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
surrealdb = "2.4.1"

# Enum helpers
strum = "0.27"
strum_macros = "0.27"
